<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.NoteDetailsActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white">
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_note"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:fontFamily="sans-serif-thin"
            />

        <ImageView
            android:id="@+id/iv_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_edit"
            android:layout_gravity="end"
            android:layout_marginRight="20dp"
            />
        <Button
            android:id="@+id/btn_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:textColor="@color/yellow"
            android:background="@color/white"
            android:text="@string/update"
            android:textSize="18sp"
            android:fontFamily="sans-serif-thin"
            android:textStyle="bold"
            android:visibility="gone"
            />
    </androidx.appcompat.widget.Toolbar>


    <EditText
        android:id="@+id/et_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:padding="20dp"
        android:hint="@string/title"
        android:textColor="@color/black"
        android:enabled="false"

        />

    <EditText
        android:id="@+id/et_note_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/et_title"
        android:padding="20dp"
        android:hint="@string/note_content"
        android:textColor="@color/black"
        android:gravity="top"
        android:enabled="false"
        />




</RelativeLayout>